--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 </head>
 <body>
    
-      <h1>Memory Game</h1> 
+      <h1 style="color: rgb(221 141 39);">Memory Game</h1> 
         <div class="topTools">            
             <!-- <span class="moves"> Move(s)</span> -->
-            <div class="time">
+            <div class="time" style="color: rgb(221 141 39);">
                 <span class="minute">00</span>
                 <span>:</span>
                 <span class="second">00</span>
              </div>
                    
-            <span class="refresh"><img src="./assets/refresh.svg" alt="refreshImage"></i></span>
+            <span class="refresh" ><img src="./assets/refresh.svg" alt="refreshImage"></i></span>
         </div> 
 
     <section class="memory-game">    
@@ -89,7 +89,7 @@
             </p>
             <br>
             <p>
-                <a class="again">Play Again !! </a>
+                <a class="again">Chơi lại </a>
             </p>
         </div>
     </section>
