modified:   app.js 	new file:   assets/HA.jpg 	deleted:    assets/congrats.jpg 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Oyun tamamlaninca çikacak ekran -->
     <section id="congratsSection" class="hidden">   
         <div id="congratsDiv">
-            <img src="./assets/congrats.jpg" alt="congratsImage">
+            <img src="./assets/HA.jpg" alt="congratsImage">
             <p class="final">
                 <span id="totalTime"></span>
             </p>
