--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
   <!-- CSS -->
        <link rel="stylesheet" href="style.css">
 
-    <title> Memory Game </title>
+    <title> MEMORY GAME </title>
 </head>
 <body>
    
-      <h1 style="color: rgb(221 141 39);">Memory Game</h1> 
+      <h1 style="color: rgb(0, 0, 0); font-size: 24px; font-weight: 800;">MEMORY GAME</h1> 
         <div class="topTools">            
             <!-- <span class="moves"> Move(s)</span> -->
-            <div class="time" style="color: rgb(221 141 39);">
+            <div class="time" style="color: rgb(0, 0, 0);">
                 <span class="minute">00</span>
                 <span>:</span>
                 <span class="second">00</span>
              </div>
                    
-            <span class="refresh" ><img src="./assets/refresh.svg" alt="refreshImage"></i></span>
+            <span class="refresh"   style="color: rgb(0, 0, 0);"><img src="./assets/refresh.svg" alt="refreshImage"></i></span>
         </div> 
 
     <section class="memory-game">    
@@ -87,6 +87,8 @@
             <p class="final">
                 <span id="totalTime"></span>
             </p>
+            <br>
+            <br>
             <br>
             <p>
                 <a class="again">Chơi lại </a>
